<resources>
    <string name="app_name">Desi Breeds India</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-1176560215561819~1912392876</string>
    <string name="banner_home_footer" translatable="false">ca-app-pub-1176560215561819/1030981070</string>

    <string name="warn_name">Enter the Name</string>
    <string name="warn_mobile">Enter the Mobile</string>
    <string name="warn_valid_mobile">Enter the Valid Mobile</string>
    <string name="warn_email">Enter the Email</string>
    <string name="warn_valid_email">Enter the Valid Email</string>

    <string name="warn_password">Enter the Password</string>
    <string name="warn_valid_password">Password should not below 5 characters</string>
    <string name="warn_otp">Enter the Valid OTP</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sign_in">Sign In</string>
    <string name="send_otp">Send OTP</string>
    <string name="mobile">Mobile Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="resend">Resend OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="next">Next</string>
    <string name="tag_send">send</string>
    <string name="tag_verify">verify</string>
    <string name="valid_phone">Please enter valid mobile number</string>
    <string name="verified">Verified Successfully...</string>
    <string name="please_wait">Please wait...</string>
    <string name="resending_code">Resending verification code...</string>
    <string name="resend_code">Resend code</string>
    <string name="verified_success">Successfully Verified</string>
    <string name="invalid_otp">Invalid OTP ! Please enter correct OTP</string>
    <string name="name">Name</string>
    <string name="email">Email (Optional)</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="address">Address</string>
    <string name="check_internet">Check Internet Connection</string>
    <string name="GOOGLE_ASSET_KEY">red</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="message">Message</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="all_permissions_denied_feedback">All those permissions are needed for doing some magic</string>
    <string name="permission_rationale_settings_button_text">SETTINGS</string>
    <string name="need_permission">Need Permissions</string>
    <string name="grant_permission">Grant</string>
    <string name="permission_description">app needs Storage and Location permissions.</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_location_contacts">This app needs access to your location and contacts to know where and who you are.</string>
    <string name="rationale_sms">This app needs access to your sms to read all your great messages.</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \nLocation &amp; Contacts: %s
        \nSMS: %s
    </string>
    <string name="camera">Camera</string>
    <string name="location_and_contacts">Location and Contacts</string>
    <string name="sms">SMS</string>
    <string name="order_now">Order Now</string>
    <string name="closed">Closed</string>
    <string name="nodata">No data</string>
    <string name="add_fav">Add Fav</string>
    <string name="share">Share</string>
</resources>
