<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/userLogin_root">
    <include
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/header_toolbar"/>
    <View
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
<ScrollView
    android:id="@+id/scrollView"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone_title_text"/>


        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="phone_title_text"/>

        <TextView
            android:id="@+id/status"
            android:text="signed_out"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <Button
            android:id="@+id/sign_out_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out" />
    <LinearLayout
        android:layout_marginTop="0.1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="Enter your mobile number to get One Time Password (OTP)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
       <!-- <ImageView
            android:padding="5dp"
            android:layout_marginRight="2dp"
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="facebook"
            android:src="@drawable/facebook_btn" />

        <ImageView
            android:padding="5dp"
            android:layout_marginLeft="2dp"
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/google_btn" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/country_code"
            android:layout_marginTop="22dp"
            android:text="+91"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_mobile"
                android:lines="1"
                android:digits="1234567890"
                android:textSize="18sp"
                android:inputType="phone"
                android:textColorHint="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:maxLength="15" />

        </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_verification"
            android:layout_width="match_parent"
          android:textSize="18sp"

          android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:visibility="gone"

                android:id="@+id/input_layout_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/verification_code"
                android:maxLength="10" />


        </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <!-- <TextView
           android:textColor="@color/theme_green"
           android:layout_marginRight="10dp"
           android:gravity="right"
           android:text="@string/forgot"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />-->
    </LinearLayout>

    <Button
        android:background="@android:color/black"
        android:id="@+id/button_start_verification"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/send_otp"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <Button
            android:background="@android:color/black"
            android:id="@+id/button_verify_phone"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/next"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:background="@android:color/black"
            android:id="@+id/button_resend"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/resend"
            android:layout_margin="15dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<TextView
            android:id="@+id/txt_sign_up"
            android:textColor="@color/theme_red"
            android:gravity="center_horizontal"
            android:text="@string/sign_up_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />-->

<!--    <com.facebook.login.widget.LoginButton
        android:visibility="gone"
        android:theme="@style/AppTheme"
        android:id="@+id/login_button_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />-->
    </LinearLayout>
</ScrollView>
   </LinearLayout>
